kubernetes/apps/home/home-assistant/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hass
  namespace: home
spec:
  ingressClassName: external-nginx
  rules:
    - host: hass.rafaribe.com
      http:
        paths:
          - backend:
              service:
                name: home-assistant
                port:
                  number: 8123
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - hass.rafaribe.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hass-code
  namespace: home
spec:
  ingressClassName: internal-nginx
  rules:
    - host: hc.rafaribe.com
      http:
        paths:
          - backend:
              service:
                name: home-assistant-codeserver
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - hc.rafaribe.com
